--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,32 @@
 {
-    "manifest_version": 3,
-    "name": "Fingerprint sweep",
-    "version": "1.0",
-    "description": "Spoof data that is used to create a cookie-less fingerprint",
-    "permissions": ["storage", "activeTab"],
-    "host_permissions": ["<all_urls>"],
-    "action": {
-      "default_popup": "popup/popup.html",
-      "default_icon":{
-        "16": "icons/icon.png",
-        "48": "icons/icon.png",
-        "128": "icons/icon.png"
-      }
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["*://*/*"],
-        "js": ["content.js"]
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Fingerprint Sweep",
+  "version": "1.0",
+  "description": "Spoof data that is used to create a cookie-less fingerprint",
+  "permissions": ["storage", "scripting","activeTab"],
+  "host_permissions": ["<all_urls>"],
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+      "16": "icons/icon.png",
+      "48": "icons/icon.png",
+      "128": "icons/icon.png"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": ["*://*/*"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["inject.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
+}
